Check closed handler